Product section completed with responsive

--- a/Day-15/watch-website-asset/watch-website-asset/index.html
+++ b/Day-15/watch-website-asset/watch-website-asset/index.html
@@ -97,7 +97,7 @@
 
             <div class="grid min-[321px]:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 md:gap-8 mb-10">
 
-                <div class="py-5  flex flex-col justify-center items-center ">
+                <div class="py-5  flex flex-col justify-center items-center">
                     <img src="images/ultra 1.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out">
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Ultra I</h3>
                     <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
@@ -108,7 +108,7 @@
                 </div>
     
                 <div class=" py-5 flex flex-col justify-center items-center ">
-                    <img src="images/ultra 2.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
+                    <img src="images/ultra 2.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out">
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Ultra II</h3>
                     <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                     <div class="flex justify-between gap-1 items-center">
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class=" flex flex-col justify-center items-center ">
-                    <img src="images/product1.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
+                    <img src="images/product1.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out">
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart I</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class=" flex flex-col justify-center items-center ">
-                    <img src="images/product2.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
+                    <img src="images/product2.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out">
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart II</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class=" py-5 flex flex-col justify-center items-center ">
-                    <img src="images/xiaomi watch 2.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
+                    <img src="images/xiaomi watch 2.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out">
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Xiaomi watch 2</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class=" flex flex-col justify-center items-center ">
-                    <img src="images/product3.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
+                    <img src="images/product3.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out">
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart III</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
