--- a/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
@@ -42,7 +42,7 @@
                 <div class="flex flex-col justify-center md:justify-start md:w-[45%]">
                     <h1 class="text-white md:text-start text-[24px] sm:text-[32px] lg:text-[38px] xl:text-[44px] 2xl:text-[52px] text-center font-bold ">"Transform your space <br> with elegance."</h1>
                     <div class="pt-10 hidden md:flex md:justify-start gap-5">
-                        <a href="#" class="py-2 px-5 rounded-full  bg-[#FFD748]">Shope Now</a>
+                        <a href="#" class="py-2 px-5 rounded-full  bg-[#FFD748]">Shop Now</a>
                         <a href="#" class="py-2 px-8 rounded-full border border-white hover:text-[#FFD748] hover:border-[#FFD748]">Explore</a>    
                     </div>
                 </div>
@@ -50,13 +50,40 @@
                     <img src="images/home-right.png" alt="">
                 </div>
                 <div class="pt-10 flex justify-center gap-5 md:hidden">
-                    <a href="#" class="py-2 px-5 rounded-full  bg-[#FFD748]">Shope Now</a>
+                    <a href="#" class="py-2 px-5 rounded-full  bg-[#FFD748]">Shop Now</a>
                     <a href="#" class="py-2 px-8 rounded-full border border-white hover:text-[#FFD748]">Explore</a>    
                 </div>
             </section>
         </section>
     </section>
 
+    <section class="py-10 min-[375px]:py-32 md:max-lg:py-10 lg:py-20">
+        <section class=" wrapper grid min-[375px]:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 md:gap-8 mb-10">
+            
+            <div class=" h-[250px] flex flex-col  justify-center  text-center min-[375px]:text-start items-center mb-10 md:col-span-3 lg:col-span-1 ">
+                <div class="md:max-lg:text-center md:max-lg:w-[50%]">
+                    <h2 class="text-[24px] md:text-[28px] font-semibold text-[#2F2F2F]">Crafted with <br> excellent mateiral.</h2>
+                    <p class="text-[12px] font-medium text-[#6A6A6A] mb-5  px-">Donec mattis porta eros, aliquet finbus risus interdum at. Nulla vivethe as it was for us to know what was to be done.</p>
+                    <a href="#" class="bg-[#35736E] text-white rounded-full px-5 py-1 font-light">Explore</a>
+                </div>
+            </div>
+            <div class="mt-20 min-[375px]:mt-0 md:mt-0 bg-[#DDE3E6] rounded-2xl flex justify-center flex-col items-center  h-[230px]">
+                <img src="images/product-1.png" alt="" class="absolute mb-44 lg:mb-36 w-[180px] min-[375px]:w-[130px] lg:w-[150px]    transform hover:scale-105 transition duration-1000 ease-in-out">
+                <h2 class="mt-36 font-semibold">Moder Chair</h2>
+                <span class="font-semibold">$60.00</span>
+            </div>
+            <div class="mt-32 min-[375px]:mt-20 md:mt-0 bg-[#DDE3E6] rounded-2xl flex justify-center flex-col items-center  h-[230px]">
+                <img src="images/product-2.png" alt="" class="absolute mb-44 lg:mb-36 w-[200px] min-[375px]:w-[150px] lg:w-[180px]    transform hover:scale-105 transition duration-1000 ease-in-out">
+                <h2 class="mt-36 font-semibold">Kruzo Aero Chair</h2>
+                <span class="font-semibold">$78.00</span>
+            </div>
+            <div class="mt-32 min-[375px]:mt-20 md:mt-0 bg-[#DDE3E6] rounded-2xl flex justify-center flex-col items-center  h-[230px]">
+                <img src="images/product-3.png" alt="" class="absolute mb-40 lg:mb-32  min-[375px]:w-[130px] w-[150px] lg:w-[130px]    transform hover:scale-105 transition duration-1000 ease-in-out">
+                <h2 class="mt-36 font-semibold">Ergonomic Chair</h2>
+                <span class="font-semibold">$88.00</span>
+            </div>
+        </section>
+    </section>
 
     
 </body>
