--- a/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
@@ -22,10 +22,10 @@
             <div class=" text-white flex justify-between items-center">
                 <ul class="hidden sm:flex gap-4 md:gap-5 mr-10 md:mr-20">
                     <li><a href="#" class="border-b-4 border-[#FFD748] font-light">Home</a></li>
-                    <li><a href="#" class="hover:border-b-4 border-[#FFD748] font-light">About us</a></li>
-                    <li><a href="#" class="hover:border-b-4 border-[#FFD748] font-light">Services</a></li>
-                    <li><a href="#" class="hover:border-b-4 border-[#FFD748] font-light">Blog</a></li>
-                    <li><a href="#" class="hover:border-b-4 border-[#FFD748] font-light">Contact us</a></li>
+                    <li><a href="#" class="hover:border-b-2 border-[#FFD748] font-light">About us</a></li>
+                    <li><a href="#" class="hover:border-b-2 border-[#FFD748] font-light">Services</a></li>
+                    <li><a href="#" class="hover:border-b-2 border-[#FFD748] font-light">Blog</a></li>
+                    <li><a href="#" class="hover:border-b-2 border-[#FFD748] font-light">Contact us</a></li>
                 </ul>
                 <div class="flex justify-between gap-3 items-center">
                     <img src="images/user.png" alt="img" class="w-[30px]">
@@ -42,7 +42,7 @@
                 <div class="flex flex-col justify-center md:justify-start md:w-[45%]">
                     <h1 class="text-white md:text-start text-[24px] sm:text-[32px] lg:text-[38px] xl:text-[44px] 2xl:text-[52px] text-center font-bold ">"Transform your space <br> with elegance."</h1>
                     <div class="pt-10 hidden md:flex md:justify-start gap-5">
-                        <a href="#" class="py-2 px-5 rounded-full  bg-[#FFD748]">Shop Now</a>
+                        <a href="#" class="py-2 px-5 rounded-full  bg-[#FFD748] hover:bg-[#ffff4f]">Shop Now</a>
                         <a href="#" class="py-2 px-8 rounded-full border border-white hover:text-[#FFD748] hover:border-[#FFD748]">Explore</a>    
                     </div>
                 </div>
@@ -64,20 +64,20 @@
                 <div class="md:max-lg:text-center md:max-lg:w-[50%]">
                     <h2 class="text-[24px] md:text-[28px] font-semibold text-[#2F2F2F]">Crafted with <br> excellent mateiral.</h2>
                     <p class="text-[12px] font-medium text-[#6A6A6A] mb-5  px-">Donec mattis porta eros, aliquet finbus risus interdum at. Nulla vivethe as it was for us to know what was to be done.</p>
-                    <a href="#" class="bg-[#35736E] text-white rounded-full px-5 py-1 font-light">Explore</a>
+                    <a href="#" class="bg-[#35736E] hover:bg-[#FFD748] hover:text-black text-white rounded-full px-5 py-1 font-light  transform  transition duration-500 ease-in-out">Explore</a>
                 </div>
             </div>
-            <div class="mt-20 min-[375px]:mt-0 md:mt-0 bg-[#DDE3E6] rounded-2xl flex justify-center flex-col items-center  h-[230px]">
+            <div class="mt-20 min-[375px]:mt-0 md:mt-0 bg-[#DDE3E6] text-[#2F2F2F] text-[15px] rounded-2xl flex justify-center flex-col items-center  h-[230px]">
                 <img src="images/product-1.png" alt="" class="absolute mb-44 lg:mb-36 w-[180px] min-[375px]:w-[130px] lg:w-[150px]    transform hover:scale-105 transition duration-1000 ease-in-out">
                 <h2 class="mt-36 font-semibold">Moder Chair</h2>
                 <span class="font-semibold">$60.00</span>
             </div>
-            <div class="mt-32 min-[375px]:mt-20 md:mt-0 bg-[#DDE3E6] rounded-2xl flex justify-center flex-col items-center  h-[230px]">
+            <div class="mt-32 min-[375px]:mt-20 md:mt-0 bg-[#DDE3E6] text-[#2F2F2F] text-[15px] rounded-2xl flex justify-center flex-col items-center  h-[230px]">
                 <img src="images/product-2.png" alt="" class="absolute mb-44 lg:mb-36 w-[200px] min-[375px]:w-[150px] lg:w-[180px]    transform hover:scale-105 transition duration-1000 ease-in-out">
                 <h2 class="mt-36 font-semibold">Kruzo Aero Chair</h2>
                 <span class="font-semibold">$78.00</span>
             </div>
-            <div class="mt-32 min-[375px]:mt-20 md:mt-0 bg-[#DDE3E6] rounded-2xl flex justify-center flex-col items-center  h-[230px]">
+            <div class="mt-32 min-[375px]:mt-20 md:mt-0 bg-[#DDE3E6] text-[#2F2F2F] text-[15px] rounded-2xl flex justify-center flex-col items-center  h-[230px]">
                 <img src="images/product-3.png" alt="" class="absolute mb-40 lg:mb-32  min-[375px]:w-[130px] w-[150px] lg:w-[130px]    transform hover:scale-105 transition duration-1000 ease-in-out">
                 <h2 class="mt-36 font-semibold">Ergonomic Chair</h2>
                 <span class="font-semibold">$88.00</span>
@@ -85,6 +85,7 @@
         </section>
     </section>
 
+    
     
 </body>
 </html>
