Testimonials Section Completed With Responsive

--- a/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body class="scroll-smooth">
+<body class="scroll-smooth bg-[#EEF2F1]">
 
     <section class="bg-[#35736E]">
         <header class="px-[5%] md:px-[2%] flex justify-between h-[80px] items-center">
@@ -264,6 +264,36 @@
                     </div>
                 </div>
             </div>
+        </section>
+    </section>
+
+    <section class="mb-20">
+        <section class="wrapper text-center ">
+            <h2 class="text-[32px] font-semibold mb-5 text-[#2F2F2F]">Testimonials</h2>
+            <span class="material-symbols-outlined  text-[#E3E3E3] lg:hidden">
+                expand_less
+                </span>
+            <div class="flex items-center justify-between">
+                <div class="[10%]">
+                    <div class="w-[30px] h-[30px] min-[375px]:w-[50px] min-[375px]:h-[50px] rounded-full bg-[#E3E3E3] flex items-center hover:bg-[#FFD748]">
+                        <img src="images/arrow-left.png" alt="arrow image to go to previous Testimonials" class="w-[10px] m-auto">
+                    </div>
+                </div>
+                <div class="w-[75%] h-[115px] overflow-y-scroll relative">
+                    <p class="text-[14px] max-sm:text-[12px] text-[#6A6A6A] leading-relaxed font-medium">
+                        "From the moment I laid eyes on the sleek design of the Kruzi Aero chair at FIN, I knew it was the perfect addition to my home office. Not only does it exude a modern elegance, but its ergonomic features have truly transformed my workspace. I can now sit comfortably for hours on end, enhancing both my productivity and posture. The quality craftsmanship of this chair is evident, and the customer service provided by the team at FIN was outstanding." - Mark T.
+                    </p>
+                    
+                </div>
+                <div class="[10%]">
+                    <div class="w-[30px] h-[30px] min-[375px]:w-[50px] min-[375px]:h-[50px] rounded-full bg-[#E3E3E3] flex items-center hover:bg-[#FFD748]">
+                        <img src="images/arrow-right.png" alt="arrow image to go to next Testimonials" class="w-[10px] m-auto">
+                    </div>
+                </div>
+            </div>
+            <span class="material-symbols-outlined text-[#afaeae] mt-2 lg:hidden">
+                keyboard_arrow_down
+                </span>
         </section>
     </section>
 
