--- a/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
@@ -297,6 +297,12 @@
         </section>
     </section>
 
+    <section class="flex flex-col justify-center items-center my-32">
+        <img src="images/profile.png" alt="CEO Image" class="mb-3">
+        <h3 class="text-[16px] font-semibold text-[#2F2F2F]">Zain Bin Noor</h3>
+        <h4 class="text-[14px] font-medium text-[#6A6A6A]">CEO, Co-Founder, FIN inc.</h4>
+    </section>
+
 </body>
 
 </html>
