--- a/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
@@ -29,7 +29,7 @@
                     <li><a href="#" class="border-b-4 border-[#FFD748] font-light">Home</a></li>
                     <li><a href="#" class="hover:border-b-2 border-[#FFD748] font-light">About us</a></li>
                     <li><a href="#" class="hover:border-b-2 border-[#FFD748] font-light">Services</a></li>
-                    <li><a href="#" class="hover:border-b-2 border-[#FFD748] font-light">Blog</a></li>
+                    <li><a href="#blog" class="hover:border-b-2 border-[#FFD748] font-light">Blog</a></li>
                     <li><a href="#" class="hover:border-b-2 border-[#FFD748] font-light">Contact us</a></li>
                 </ul>
                 <div class="flex justify-between gap-3 items-center">
@@ -279,11 +279,10 @@
                         <img src="images/arrow-left.png" alt="arrow image to go to previous Testimonials" class="w-[10px] m-auto">
                     </div>
                 </div>
-                <div class="w-[75%] h-[115px] overflow-y-scroll relative">
+                <div class="w-[75%] h-[115px] overflow-y-scroll relative text-justify">
                     <p class="text-[14px] max-sm:text-[12px] text-[#6A6A6A] leading-relaxed font-medium">
-                        "From the moment I laid eyes on the sleek design of the Kruzi Aero chair at FIN, I knew it was the perfect addition to my home office. Not only does it exude a modern elegance, but its ergonomic features have truly transformed my workspace. I can now sit comfortably for hours on end, enhancing both my productivity and posture. The quality craftsmanship of this chair is evident, and the customer service provided by the team at FIN was outstanding." - Mark T.
+                        "From the moment I laid eyes on the sleek design of the Kruzi Aero chair at FIN, I knew it was the perfect addition to my home office. Not only does it exude a modern elegance, but its ergonomic features have truly transformed my workspace. I can now sit comfortably for hours on end, enhancing both my productivity and posture. The quality craftsmanship of this chair is evident, and the customer service provided by the team at FIN was outstanding." <br> <span class="text-center ">- Mark T.</span>
                     </p>
-                    
                 </div>
                 <div class="[10%]">
                     <div class="w-[30px] h-[30px] min-[375px]:w-[50px] min-[375px]:h-[50px] rounded-full bg-[#E3E3E3] flex items-center hover:bg-[#FFD748]">
@@ -301,6 +300,41 @@
         <img src="images/profile.png" alt="CEO Image" class="mb-3">
         <h3 class="text-[16px] font-semibold text-[#2F2F2F]">Zain Bin Noor</h3>
         <h4 class="text-[14px] font-medium text-[#6A6A6A]">CEO, Co-Founder, FIN inc.</h4>
+    </section>
+
+    <section class="py-10" id="blog">
+        <section class="wrapper">
+            <div class="flex justify-center sm:justify-between items-center pb-10">
+                <h2 class="text-[32px] font-semibold">Recently Blog</h2>
+                <span class="font-medium border-b-4 border-[#FFD748] hidden sm:block">View All Posts</span>    
+            </div>
+            <div class="text-center sm:text- grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 sm:text-center lg:text-start">
+                <div class="my-10 sm:col-span-2 lg:col-span-1 ">
+                    <img src="images/blog-1.png" alt="Blog" class="rounded-xl">
+                    <div class="mt-10">
+                        <h3 class="text-[18px] font-semibold">First Time Home Owner Ideas</h3>
+                        <p class="text-[14px] font-semibold"><span class="text-[14px] font-normal">by</span> Nana Ama <span class="text-[14px] font-normal">on</span> Nov 18th, 2022</p>
+                    </div>
+                </div>
+                <div class="my-10">
+                    <img src="images/blog-2.png" alt="Blog" class="rounded-xl">
+                    <div class="mt-10">
+                        <h3 class="text-[18px] font-semibold">First Time Home Owner Ideas</h3>
+                        <p class="text-[14px] font-semibold"><span class="text-[14px] font-normal">by</span> Nana Ama <span class="text-[14px] font-normal">on</span> Nov 18th, 2022</p>
+                    </div>
+                </div>
+                <div class="my-10 w-[100%]">
+                    <img src="images/blog-3.png" alt="Blog" class="rounded-xl">
+                    <div class="mt-10">
+                        <h3 class="text-[18px] font-semibold">First Time Home Owner Ideas</h3>
+                        <p class="text-[14px] font-semibold"><span class="text-[14px] font-normal">by</span> Nana Ama <span class="text-[14px] font-normal">on</span> Nov 18th, 2022</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex justify-center sm:hidden">
+                <span class="font-medium border-b-4 border-[#FFD748] items-center">View All Posts</span>    
+            </div>
+        </section>
     </section>
 
 </body>
