--- a/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
@@ -200,7 +200,7 @@
                             elegance to your living space seamlessly.</p>
                     </div>
                     <div class="max-sm:mt-14">
-                        <ul class="grid grid-cols-1 md:grid-cols-2 gap-5 mb-5">
+                        <ul class="grid grid-cols-1 md:grid-cols-2 gap-5 mb-5  text-[#6A6A6A]">
                             <li class="text-[12px] flex"><span
                                     class="material-symbols-outlined text-[16px] text-[#35736E] font-bold mr-3 mt-0.5 ">fiber_manual_record</span>Our
                                 team offers personalized guidance to understand your style, preferences, and needs for a
@@ -233,38 +233,38 @@
             <div class="grid grid-cols-1 gap-10 md:grid-cols-2  min-[1150px]:grid-cols-3 justify-between">
                 <div class="flex max-[375px]:flex-col max-[375px]:items-center  max-[375px]:text-center items-start gap-5 col-span-1">
                     <div>
-                        <div class="my-10 relative min-[375px]:mt-0  bg-[#B6CACB] text-[#2F2F2F] flex justify-center  rounded-xl  w-[110px] h-[100px]">
+                        <div class="my-10 relative min-[375px]:mt-0  bg-[#B6CACB]  flex justify-center  rounded-xl  w-[110px] h-[100px]">
                             <img src="images/product-1.png" alt="images" class="absolute bottom-0 w-[95px]  transform hover:scale-105 transition duration-1000 ease-in-out">
                         </div>
                     </div>
                     <div>
-                        <h2 class="font-semibold">Modern Chair</h2>
-                        <p class="text-[14px]">Discover sleek, innovative seating solutions in our Modern Chair collection.</p>
-                        <span class="text-[12px] font-semibold">Read more</span>
+                        <h2 class="font-semibold text-[#2F2F2F]">Modern Chair</h2>
+                        <p class="text-[14px] text-[#6A6A6A]">Discover sleek, innovative seating solutions in our Modern Chair collection.</p>
+                        <span class="text-[12px] font-semibold text-[#6A6A6A]">Read more</span>
                     </div>
                 </div>
                 <div class="flex max-[375px]:flex-col max-[375px]:items-center  max-[375px]:text-center items-start gap-5 col-span-1">
                     <div>
-                        <div class="my-10 min-[375px]:mt-0  bg-[#B6CACB] text-[#2F2F2F] flex justify-center  rounded-xl  w-[110px] h-[100px]">
+                        <div class="my-10 min-[375px]:mt-0  bg-[#B6CACB]  flex justify-center  rounded-xl  w-[110px] h-[100px]">
                             <img src="images/product-2.png" alt="images" class="absolute bottom- w-[120px] -mt-6 ml-3 transform hover:scale-105 transition duration-1000 ease-in-out">
                         </div>
                     </div>
                     <div >
-                        <h2 class="font-semibold">Kruzi Aero></h2>
-                        <p class="text-[14px]">Experience futuristic comfort with our Kruzi Aero seating collection.</p>
-                        <span class="text-[12px] font-semibold">Read more</span>
+                        <h2 class="font-semibold text-[#2F2F2F]">Kruzi Aero</h2>
+                        <p class="text-[14px] text-[#6A6A6A]">Experience futuristic comfort with our Kruzi Aero seating collection.</p>
+                        <span class="text-[12px] font-semibold text-[#6A6A6A]">Read more</span>
                     </div>
                 </div>
                 <div class="flex max-[375px]:flex-col max-[375px]:items-center max-[375px]:text-center items-start gap-5 col-span-1">
                     <div>
-                        <div class="my-10 relative min-[375px]:mt-0  bg-[#B6CACB] text-[#2F2F2F] flex justify-center  rounded-xl  w-[110px] h-[100px]">
+                        <div class="my-10 relative min-[375px]:mt-0  bg-[#B6CACB]  flex justify-center  rounded-xl  w-[110px] h-[100px]">
                             <img src="images/product-3.png" alt="images" class="absolute bottom-0 w-[80px]  transform hover:scale-105 transition duration-1000 ease-in-out">
                         </div>
                     </div>
                     <div>
-                        <h2 class="font-semibold">Ergonomic Chair</h2>
-                        <p class="text-[14px]">Enhance your posture and productivity with our Ergonomic Chair selection.</p>
-                        <span class="text-[12px] font-semibold">Read more</span>
+                        <h2 class="font-semibold text-[#2F2F2F]">Ergonomic Chair</h2>
+                        <p class="text-[14px] text-[#6A6A6A]">Enhance your posture and productivity with our Ergonomic Chair selection.</p>
+                        <span class="text-[12px] font-semibold text-[#6A6A6A]">Read more</span>
                     </div>
                 </div>
             </div>
@@ -310,26 +310,26 @@
                 <h2 class="text-[32px] font-semibold text-[#2F2F2F]">Recently Blog</h2>
                 <span class="font-medium border-b-4 border-[#FFD748] hidden sm:block hover:border-[#35736E] text-[#2F2F2F]">View All Posts</span>    
             </div>
-            <div class="text-center sm:text- grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 sm:text-center lg:text-start">
-                <div class="sm:my-10 sm:col-span-2 lg:col-span-1">
+            <div class="text-center grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10 sm:text-center md:text-start text-[#2F2F2F]">
+                <div class="sm:my-10 sm:col-span-2 md:col-span-1">
                     <img src="images/blog-1.png" alt="Blog" class="rounded-xl transform hover:scale-105 transition duration-1000 ease-in-out">
                     <div class="mt-5 sm:mt-10">
-                        <h3 class="text-[18px] font-semibold">First Time Home Owner Ideas</h3>
-                        <p class="text-[14px] font-semibold"><span class="text-[14px] font-normal">by</span> Nana Ama <span class="text-[14px] font-normal">on</span> Nov 18th, 2022</p>
+                        <h3 class="text-[18px] md:text-[14px] min-[1000px]:text-[18px] font-semibold">First Time Home Ideas</h3>
+                        <p class="text-[14px] md:text-[12px] min-[1000px]:text-[14px] font-semibold"><span class="text-[14px] font-normal">by</span> Nana Ama <span class="text-[14px] font-normal">on</span> Nov 18th, 2024</p>
                     </div>
                 </div>
                 <div class="sm:my-10">
                     <img src="images/blog-2.png" alt="Blog" class="rounded-xl transform hover:scale-105 transition duration-1000 ease-in-out">
                     <div class="mt-5 sm:mt-10">
-                        <h3 class="text-[18px] font-semibold">First Time Home Owner Ideas</h3>
-                        <p class="text-[14px] font-semibold"><span class="text-[14px] font-normal">by</span> Nana Ama <span class="text-[14px] font-normal">on</span> Nov 18th, 2022</p>
+                        <h3 class="text-[18px] md:text-[14px] min-[1000px]:text-[18px] font-semibold">Budget-Friendly DIY Decor</h3>
+                        <p class="text-[14px] md:text-[12px] min-[1000px]:text-[14px] font-semibold"><span class="text-[14px] font-normal">by</span> Jamie Smith <span class="text-[14px] font-normal">on</span> May 1st, 2024 </p>
                     </div>
                 </div>
                 <div class="sm:my-10 w-[100%]">
                     <img src="images/blog-3.png" alt="Blog" class="rounded-xl transform hover:scale-105 transition duration-1000 ease-in-out">
                     <div class="mt-5 sm:mt-10">
-                        <h3 class="text-[18px] font-semibold">First Time Home Owner Ideas</h3>
-                        <p class="text-[14px] font-semibold"><span class="text-[14px] font-normal">by</span> Nana Ama <span class="text-[14px] font-normal">on</span> Nov 18th, 2022</p>
+                        <h3 class="text-[18px] md:text-[14px] min-[1000px]:text-[18px]  font-semibold">Crafting the Reading Nook </h3>
+                        <p class="text-[14px] md:text-[12px] min-[1000px]:text-[14px]  font-semibold"><span class="text-[14px] font-normal">by</span> Emily Chen <span class="text-[14px] font-normal">on</span>  May 2nd, 2024</p>
                     </div>
                 </div>
             </div>
@@ -353,8 +353,8 @@
                         <h2 class="font-semibold text-[#2F2F2F]">Subscribe to Newsletter</h2>
                     </div>
                     <div class="flex flex-col md:flex-row gap-5 w-[80%] sm:w-full" id="contact">
-                        <input type="text" id="name" name="name" placeholder="Enter your name" class="w-full px-3 py-2 border border-gray-400 rounded-lg focus:outline-none focus:border-[#35736E] text-[12px] md:text-[14px] placeholder-[#6A6A6A] font-medium text-[#35736E]" required>
-                        <input type="email" id="email" name="email" placeholder="Enter your email" class="w-full px-3 py-2 border border-gray-400 rounded-lg focus:outline-none focus:border-[#35736E] text-[12px] md:text-[14px] placeholder-[#6A6A6A] font-medium text-[#35736E]" required>
+                        <input type="text" id="name" name="name" placeholder="Enter your name" class="w-full px-3 py-2 border border-gray-400 rounded-lg focus:outline-none focus:border-[#35736E] text-[12px] md:text-[14px] placeholder-[#6A6A6A]  text-[#35736E]" required>
+                        <input type="email" id="email" name="email" placeholder="Enter your email" class="w-full px-3 py-2 border border-gray-400 rounded-lg focus:outline-none focus:border-[#35736E] text-[12px] md:text-[14px] placeholder-[#6A6A6A] text-[#35736E]" required>
                         <div class="flex justify-center">
                             <div class="bg-[#35736E] rounded-lg flex justify-center w-[40px] h-[40px] p-3 justify-self-center   hover:bg-[#2f817a]">
                                 <img src="images/send.png" alt="send message">
