--- a/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
@@ -122,10 +122,10 @@
                         <img src="images/why-choose-us.png" alt="img" class="lg:hidden sm:w-[80%]   transform hover:scale-105 transition duration-1000 ease-in-out">
                     </div>
                 </div>
-                <div class="pt-14 lg:py-0 grid grid-cols-1 min-[375px]:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 gap-5  items-start">
+                <div class="pt-14 lg:py-0 grid grid-cols-1 min-[400px]:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 gap-5  items-start">
 
                     <div
-                        class="flex flex-col justify-center items-center text-center sm:text-start md:items-start mb-10 md:mb-0">
+                        class="flex flex-col justify-center items-center text-center md:text-start md:items-start mb-10 md:mb-0">
                         <div class="w-10 h-10 md:w-7 md:h-7 rounded-full bg-[#CBD9D9] ml-5 relative">
                             <img src="images/Truck.png" alt="img" class="absolute -left-3 w-8">
                         </div>
@@ -135,7 +135,7 @@
                     </div>
 
                     <div
-                        class="flex flex-col justify-center items-center text-center sm:text-start md:items-start mb-10 md:mb-0">
+                        class="flex flex-col justify-center items-center text-center md:text-start md:items-start mb-10 md:mb-0">
                         <div class="w-10 h-10 md:w-7 md:h-7 rounded-full bg-[#CBD9D9] ml-5 relative">
                             <img src="images/Shop-bag.png" alt="img" class="absolute -left-3 w-7 md:w-6">
                         </div>
@@ -146,7 +146,7 @@
                     </div>
 
                     <div
-                        class="flex flex-col justify-center items-center text-center sm:text-start md:items-start mb-10 md:mb-0">
+                        class="flex flex-col justify-center items-center text-center md:text-start md:items-start mb-10 md:mb-0">
                         <div class="w-10 h-10 md:w-7 md:h-7 rounded-full bg-[#CBD9D9] ml-5 relative flex  items-center">
                             <img src="images/Support.png" alt="img" class="absolute -left-2.5 w-8 md:w-6">
                         </div>
@@ -156,7 +156,7 @@
                     </div>
 
                     <div
-                        class="flex flex-col justify-center items-center text-center sm:text-start md:items-start mb-10 md:mb-0">
+                        class="flex flex-col justify-center items-center text-center md:text-start md:items-start mb-10 md:mb-0">
                         <div class="w-10 h-10 md:w-7 md:h-7 rounded-full bg-[#CBD9D9] ml-5 relative">
                             <img src="images/Return.png" alt="img" class="absolute -left-2 w-7 md:w-5">
                         </div>
