--- a/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
@@ -39,7 +39,7 @@
                     <div class="w-[30px] h-[30px] rounded-full hover:bg-[#FFD748] flex justify-center items-center">
                         <img src="images/cart.png" alt="img" class="w-[25px] sm:w-[30px]">
                     </div>
-                    <div class="w-[30px] h-[30px] rounded-full hover:bg-[#FFD748] flex justify-center items-center sm:hidden block">
+                    <div class="w-[30px] h-[30px] rounded-full hover:bg-[#FFD748] flex justify-center items-center sm:hidden ">
                         <span class="material-symbols-outlined">
                             more_vert
                         </span>
