--- a/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/index.html
@@ -200,7 +200,7 @@
                             elegance to your living space seamlessly.</p>
                     </div>
                     <div class="max-sm:mt-14">
-                        <ul class="grid grid-cols-1 md:grid-cols-2 gap-5 mb-5  text-[#6A6A6A]">
+                        <ul class="grid grid-cols-1 sm:grid-cols-2 gap-5 mb-5  text-[#6A6A6A]">
                             <li class="text-[12px] flex"><span
                                     class="material-symbols-outlined text-[16px] text-[#35736E] font-bold mr-3 mt-0.5 ">fiber_manual_record</span>Our
                                 team offers personalized guidance to understand your style, preferences, and needs for a
